[gd_scene load_steps=5 format=3 uid="uid://bommmvy1qyobc"]

[ext_resource type="Script" path="res://ui/components/settings/settings.gd" id="1_00drh"]
[ext_resource type="FontFile" uid="uid://b1w37357tl3er" path="res://assets/fonts/Cantarell-Bold.ttf" id="1_ypfvs"]
[ext_resource type="Texture2D" uid="uid://hcq0d87vm0xk" path="res://assets/images/folder-open-symbolic 1.svg" id="3_e8eqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icrj2"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="Settings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_icrj2")
script = ExtResource("1_00drh")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Titlebar" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="VBox/Titlebar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ypfvs")
theme_override_font_sizes/font_size = 24
text = "Settings"
vertical_alignment = 1

[node name="Border" type="HSeparator" parent="VBox/Titlebar"]
layout_mode = 2

[node name="DirectoriesSettings" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/DirectoriesSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.415686, 0.415686, 0.415686, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ypfvs")
text = "Data Directories"
vertical_alignment = 1

[node name="AppDataDir" type="HBoxContainer" parent="VBox/DirectoriesSettings"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/DirectoriesSettings/AppDataDir"]
layout_mode = 2
size_flags_vertical = 8
text = "Application Data Directory:"

[node name="Value" type="LineEdit" parent="VBox/DirectoriesSettings/AppDataDir"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "/home/jdavis/.local/share/drivechain_launcher"
editable = false

[node name="Open" type="Button" parent="VBox/DirectoriesSettings/AppDataDir"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_e8eqq")

[node name="DrivechainDataDir" type="HBoxContainer" parent="VBox/DirectoriesSettings"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/DirectoriesSettings/DrivechainDataDir"]
layout_mode = 2
size_flags_vertical = 8
text = "Drivechain Data Directory:"

[node name="Value" type="LineEdit" parent="VBox/DirectoriesSettings/DrivechainDataDir"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "/home/jdavis/.local/share/drivechain_launcher"
editable = false

[node name="Open" type="Button" parent="VBox/DirectoriesSettings/DrivechainDataDir"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_e8eqq")

[node name="AppSettings" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBox/AppSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.415686, 0.415686, 0.415686, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ypfvs")
text = "App Settings"
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox/AppSettings"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBox/AppSettings/HBox"]
layout_mode = 2
text = "Display Scale"

[node name="ScaleSpin" type="SpinBox" parent="VBox/AppSettings/HBox"]
layout_mode = 2
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.0

[node name="Footer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="Border" type="HSeparator" parent="VBox/Footer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/Footer"]
layout_mode = 2

[node name="GoBackButton" type="Button" parent="VBox/Footer/HBoxContainer"]
layout_mode = 2
text = "Hide Settings"

[node name="VSeparator" type="VSeparator" parent="VBox/Footer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="VBox/Footer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
text = "Reset
"

[connection signal="pressed" from="VBox/DirectoriesSettings/AppDataDir/Open" to="." method="_on_app_data_open_pressed"]
[connection signal="pressed" from="VBox/DirectoriesSettings/DrivechainDataDir/Open" to="." method="_on_drivechain_data_open_pressed"]
[connection signal="value_changed" from="VBox/AppSettings/HBox/ScaleSpin" to="." method="_on_scale_spin_value_changed"]
[connection signal="pressed" from="VBox/Footer/HBoxContainer/GoBackButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="VBox/Footer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
